--- a/TerraForgedApp/build.gradle
+++ b/TerraForgedApp/build.gradle
@@ -1,7 +1,3 @@
-plugins {
-    id "java"
-}
-
 repositories {
     mavenCentral()
     jcenter()
@@ -15,4 +11,5 @@ dependencies {
 
 jar {
     manifest { attributes "Main-Class": "com.terraforged.app.Main" }
+    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
