--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,6 @@
 rootProject.name = "TerraForged"
-include ":Noise2D", ":FeatureManager", ":TerraForgedCore", ":TerraForgedApp"
+include ":Noise2D"
+include ":FeatureManager"
+include ":TerraForgedCore"
+include ":TerraForgedApp"
+include ":TerraForgedMod"
