--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 allprojects {
     apply plugin: "java"
     group = "com.terraforged"
-    version = "${mod_version}${getBuildNumber()}"
+    version = "${version}${getBuildNumber()}"
 }
+
+jar.enabled(false)
 
 static def getBuildNumber() {
     def buildNumber = System.getenv("BUILD_NUMBER")
