separate api source from mod source

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = "TerraForged"
 include ":Noise2D"
 include ":FeatureManager"
 include ":TerraForgedCore"
-include ":TerraForgedApp"
+include ":TerraForgedAPI"
 include ":TerraForgedMod"
+include ":TerraForgedApp"
