--- a/TerraForgedAPI/build.gradle
+++ b/TerraForgedAPI/build.gradle
@@ -10,10 +10,10 @@ buildscript {
 }
 
 apply plugin: "net.minecraftforge.gradle"
+apply plugin: "maven-publish"
 apply plugin: "eclipse"
-apply plugin: "maven"
 
-version = "${version}-mc${mc_version}"
+version = "${mc_version}-${version}"
 archivesBaseName = "TerraForgedAPI"
 
 repositories {
@@ -32,28 +32,29 @@ minecraft {
     mappings channel: mcp_channel, version: mcp_version
 }
 
-task deobfApiJar(type: Jar, dependsOn: classes) {
-    classifier = "deobf"
-    duplicatesStrategy = "EXCLUDE"
+jar {
     from("$buildDir/classes/java/main")
     from(project(":Noise2D").buildDir.getPath() + "/classes/java/main")
     from(project(":FeatureManager").buildDir.getPath() + "/classes/java/main")
     from(project(":TerraForgedCore").buildDir.getPath() + "/classes/java/main")
 }
 
-jar {
-    dependsOn(deobfApiJar)
-}
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
 
-artifacts{
-    archives deobfApiJar
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "https://io.terraforged.com/repository/maven/") {
-                authentication(userName: System.getenv("MAVEN_USER"), password: System.getenv("MAVEN_PASS"))
+    if (System.getenv("MAVEN_USER") != null && System.getenv("MAVEN_PASS") != null) {
+        repositories {
+            maven {
+                credentials {
+                    username System.getenv("MAVEN_USER")
+                    password System.getenv("MAVEN_PASS")
+                }
+                name = "nexus"
+                url = "https://io.terraforged.com/repository/maven/"
             }
         }
     }
