--- a/TerraForgedApp/build.gradle
+++ b/TerraForgedApp/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: "maven-publish"
+apply plugin: "java"
+
 repositories {
     mavenCentral()
     jcenter()
@@ -12,4 +15,8 @@ jar {
     manifest { attributes "Main-Class": "com.terraforged.app.Main" }
 
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
+publish {
+    dependsOn(jar)
 }
