--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 allprojects {
     apply plugin: "java"
     group = "com.terraforged"
-    version = "${version}"
+    version = mod_version
 }
 
 jar.enabled(false)
