remove settings.gradle from n2d

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ out/
 run/
 *.iml
 /.gradle/
-/Noise2D/out/
 /.idea/
-/Noise2D/out/production/resources/
-/Noise2D/out/production/resources/license.txt
+*/build/
+*/out/
