--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Noise2D"]
 	path = Noise2D
 	url = https://github.com/TerraForged/Noise2D.git
+[submodule "FeatureManager-fabric"]
+	path = FeatureManager-fabric
+	url = https://github.com/liachmodded/terraforged-featuremanager-fabric.git
