--- a/TerraForgedMod/build.gradle
+++ b/TerraForgedMod/build.gradle
@@ -1,4 +1,4 @@
-buildscript {
+    buildscript {
     repositories {
         jcenter()
         mavenCentral()
@@ -37,6 +37,9 @@ dependencies {
 
 minecraft {
     mappings channel: mcp_channel, version: mcp_version
+
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
     runs {
         client {
             workingDirectory project.file("run/client")
