--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@ mc_version=1.15.2
 forge_version=31.1.1
 mcp_channel=snapshot
 mcp_version=20200225-1.15.1
-yarn_build=14
+fabric_mc_version=20w11a
+yarn_build=6
 fabric_loader_version=0.7.8+build.187
-fabric_api_version=0.5.0+build.293-1.15
+fabric_api_version=0.5.3+build.308-1.16
 org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
