- use fast-util long2obj maps - reorganised river stuff - improvements to TerrainHelper - fixes buildings spawning with terrain inside

--- a/TerraForgedCore/build.gradle
+++ b/TerraForgedCore/build.gradle
@@ -1,7 +1,12 @@
 apply plugin: "maven-publish"
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     compile project(":Noise2D")
+    compile "it.unimi.dsi:fastutil:8.2.1"
 }
 
 publishing {
