--- a/TerraForgedApp/build.gradle
+++ b/TerraForgedApp/build.gradle
@@ -8,12 +8,12 @@ repositories {
 
 dependencies {
     compile "org.processing:core:3.3.7"
+    compile "it.unimi.dsi:fastutil:8.2.1"
     compile project(":TerraForgedCore")
 }
 
 jar {
     manifest { attributes "Main-Class": "com.terraforged.app.Main" }
-
     from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
 }
 
