--- a/TerraForgedMod/build.gradle
+++ b/TerraForgedMod/build.gradle
@@ -36,7 +36,7 @@ minecraft {
             workingDirectory project.file("run/client")
             property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
             property "forge.logging.console.level", "debug"
-            jvmArgs "-Xmx8G", "-Xms6G", "-Ddev", "-DvanillaBiomes"
+            jvmArgs "-Xmx8G", "-Xms6G", "-Ddev"
             mods {
                 terraforged {
                     source sourceSets.main
