--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,11 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-build/
-out/
-run/
 *.iml
-.gradle/
+
+run/
+out/
+build/
 .idea/
-**/build/
-**/out/
-generated/resources/.cache
+.gradle/
+.cache/
