- tweaks to mountain biome trees - redo temp categorization of mountain biomes

--- a/build.gradle
+++ b/build.gradle
@@ -127,6 +127,10 @@ classes {
     dependsOn(collectLibs)
 }
 
+build {
+    dependsOn("reobfJar")
+}
+
 publishing {
     publications {
         // publish the mod jar & api jar
