- improve how terrain is cut out above village pieces - further refinements to transition points - fix incorrect preset jsons - improve accuracy of biome lookups

--- a/build.gradle
+++ b/build.gradle
@@ -109,8 +109,8 @@ classes {
     dependsOn(collectLibs)
 }
 
-jar {
-    finalizedBy("reobfJar")
+build {
+    dependsOn("reobfJar")
 }
 
 publishing {
