--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ repositories {
 
 dependencies {
     minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
-    lib (project(":FeatureManager")) { transitive false }
-    lib project(":Engine")
+    lib(project(":FeatureManager")) { transitive false }
+    lib(project(":Engine"))
 }
 
 minecraft {
@@ -97,24 +97,6 @@ task collectLibs(type: Copy) {
     duplicatesStrategy = "EXCLUDE"
 }
 
-// runs during publication
-task apiJar(type: Jar) {
-    // make sure jar is reobf'd before creating the api jar
-    // dependents must use fg.deobf("dependency") for their environment
-    dependsOn("reobfJar")
-
-    // copy contents of the main mod jar but only select packages
-    from { zipTree(tasks.jar.archivePath) }
-    include "com/terraforged/fm/**"
-    include "com/terraforged/api/**"
-    include "com/terraforged/core/**"
-    include "com/terraforged/n2d/**"
-    include "com/terraforged/world/**"
-
-    // self explanatory
-    classifier "api"
-}
-
 processResources {
     filesMatching("**/mods.toml") {
         // replaces the version string in the mods.toml
@@ -127,28 +109,31 @@ classes {
     dependsOn(collectLibs)
 }
 
-publishing {
-    publications {
-        // publish the mod jar & api jar
-        mavenJava(MavenPublication) {
-            artifact jar
-            artifact apiJar
-        }
-    }
-
-    if (System.getenv("MAVEN_USER") != null && System.getenv("MAVEN_PASS") != null) {
-        repositories {
-            maven {
-                credentials {
-                    username System.getenv("MAVEN_USER")
-                    password System.getenv("MAVEN_PASS")
-                }
-                name = "nexus"
-                url = "https://io.terraforged.com/repository/maven/"
-            }
-        }
-    }
+build {
+//    dependsOn("reobfJar")
 }
+
+//publishing {
+//    publications {
+//        // publish the mod jar & api jar
+//        mavenJava(MavenPublication) {
+//            artifact jar
+//        }
+//    }
+//
+//    if (System.getenv("MAVEN_USER") != null && System.getenv("MAVEN_PASS") != null) {
+//        repositories {
+//            maven {
+//                credentials {
+//                    username System.getenv("MAVEN_USER")
+//                    password System.getenv("MAVEN_PASS")
+//                }
+//                name = "nexus"
+//                url = "https://io.terraforged.com/repository/maven/"
+//            }
+//        }
+//    }
+//}
 
 static def getClassifier() {
     if (System.getenv("GIT_TAG_NAME") != null) {
