--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ minecraft {
             property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
             property "forge.logging.console.level", "debug"
             jvmArgs "-Xmx8G", "-Xms6G", "-Ddev"
+            arg "-mixin.config=mixin.terraforged.json"
             mods {
                 terraforged {
                     source sourceSets.main
@@ -65,6 +66,7 @@ minecraft {
             property "forge.logging.markers", "SCAN,REGISTRIES,REGISTRYDUMP"
             property "forge.logging.console.level", "debug"
             jvmArgs "-Xmx8G", "-Xms6G", "-Ddev"
+            arg "-mixin.config=mixin.terraforged.json"
             mods {
                 terraforged {
                     source sourceSets.main
