--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ dependencies {
 
 minecraft {
     mappings channel: mcp_channel, version: mcp_version
-    accessTransformer = file("src/main/resources/META-INF/transformers.cfg")
+    accessTransformer = file("src/main/resources/META-INF/accesstransformer.cfg")
     runs {
         client {
             workingDirectory project.file("run/client")
@@ -119,31 +119,24 @@ classes {
     dependsOn(collectLibs)
 }
 
-build {
-//    dependsOn("reobfJar")
+jar {
+    manifest {
+        attributes([
+                "Specification-Title": "TerraForged",
+                "Specification-Vendor": "TerraForged",
+                "Specification-Version": "1",
+                "Implementation-Title": project.name,
+                "Implementation-Version": "${version}",
+                "Implementation-Vendor" :"TerraForged",
+                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+                "MixinConfigs": "mixin.terraforged.json"
+        ])
+    }
 }
 
-//publishing {
-//    publications {
-//        // publish the mod jar & api jar
-//        mavenJava(MavenPublication) {
-//            artifact jar
-//        }
-//    }
-//
-//    if (System.getenv("MAVEN_USER") != null && System.getenv("MAVEN_PASS") != null) {
-//        repositories {
-//            maven {
-//                credentials {
-//                    username System.getenv("MAVEN_USER")
-//                    password System.getenv("MAVEN_PASS")
-//                }
-//                name = "nexus"
-//                url = "https://io.terraforged.com/repository/maven/"
-//            }
-//        }
-//    }
-//}
+build {
+    dependsOn("reobfJar")
+}
 
 static def getClassifier() {
     if (System.getenv("GIT_TAG_NAME") != null) {
