Move temp files to todo. Added some extra presets

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -12,5 +12,5 @@ displayURL="https://terraforged.com"
 issueTrackerURL="https://github.com/TerraForged/TerraForged/issues"
 description='''
 Description:
- A terrain generator attempting to create more immersive, inspiring worlds to explore and build in!
+ A terrain generator!
 '''
