temp tweak to mvn stuff

--- a/build.gradle
+++ b/build.gradle
@@ -146,7 +146,8 @@ static def getClassifier() {
     if (System.getenv("GIT_TAG_NAME") != null) {
         return ""
     }
-    return "-SNAPSHOT"
+//    return "-SNAPSHOT"
+    return ""
 }
 
 static def getBuildNumber() {
@@ -157,7 +158,7 @@ static def getBuildNumber() {
     // append build number on mod manifest
     def buildNumber = System.getenv("BUILD_NUMBER")
     if (buildNumber != null) {
-        return "-${buildNumber}"
+//        return "-${buildNumber}"
     }
     return ""
 }
