--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -5,8 +5,8 @@ loaderVersion="[35.1,)"
 modId="terraforged"
 displayName="TerraForged"
 version="${version}"
-authors="dags"
-credits="dags"
+authors="dags,Won-Ton"
+credits="dags,Won-Ton"
 logoFile="terraforged.png"
 displayURL="https://terraforged.com"
 issueTrackerURL="https://github.com/TerraForged/TerraForged/issues"
