--- a/gradle.properties
+++ b/gradle.properties
@@ -4,5 +4,5 @@ mc_version=1.16.4
 forge_version=35.1.13
 mcp_channel=snapshot
 mcp_version=20201028-1.16.3
-#org.gradle.jvmargs=-Xmx4G
-#org.gradle.daemon=false
+# Prevents stray gradle processes hanging around chewing up resources
+org.gradle.daemon.idletimeout=0
