--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,11 @@
 mod_version=0.2.0
-release_version=BETA-8
-mc_version=1.16.4
+release_version=RC-1
+
 forge_version=35.1.13
+minecraft_version=1.16.4
+
 mcp_channel=snapshot
 mcp_version=20201028-1.16.3
+
 # Prevents stray gradle processes hanging around chewing up resources
 org.gradle.daemon.idletimeout=0
