--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,10 @@ repositories {
     jcenter()
 }
 
+// If building from source
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
+//    lib "com.terraforged:Engine:0.2.0"
     lib(project(":Engine"))
 }
 
