--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
-        maven { url "http://repo.spongepowered.org/maven" }
+        maven { url "https://repo.spongepowered.org/maven" }
         maven { url "https://files.minecraftforge.net/maven" }
     }
     dependencies {
