Fix buildscript adding build numbers on release jars

--- a/build.gradle
+++ b/build.gradle
@@ -186,7 +186,8 @@ publishing {
 
 def getClassifier() {
     def classifier = ""
-    if (System.getenv("GIT_TAG_NAME") == null) {
+    // Don't append a classifier if building a release jar!
+    if (System.getenv("GIT_TAG_NAME") != null) {
         // Append development version (ALPHA/BETA/RC-#)
         def dev = "${dev_version}"
         if (!dev.isEmpty()) {
